# sansdm

./: .coveragerc  .flake8  .gitattributes  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: ci.yml
conda-recipe/: meta.yaml
docs/: conf.py
docs/source/: api.rst  conf.py  index.rst
sansdm/: _version.py
