[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sansdm"
version = "0.0.0"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "sansdm"
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]
keywords = []
dependencies = []

[project.optional-dependencies]
dev = ["black", "pytest", "flake8", "isort"]

[project.urls]
Homepage = "https://github.com/spc-group/sansdm"

[project.scripts]
# command = "sansdm.__main__:main"
